--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,12 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 
 # packages
 #set(OpenCV_DIR "/usr/local/include") 	    #修改了这一句，指定opencv头文件的路径
-#set(OpenCV_DIR "/usr/local/opencv331/share/OpenCV")
+#set(OpenCV_DIR "/usr/local/opencv331share/OpenCV")
 find_package(OpenCV REQUIRED)
 
 
-#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/creator/Projects/C++/REN/run/数据)	#这一句指定可执行文件的位置
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../run)	#这一句指定可执行文件的位置
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/creator/Projects/C++/REN/run)	#这一句指定可执行文件的位置
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../run)	#这一句指定可执行文件的位置
 
 include_directories(${OPENCV_INCLUDE_DIRS})
 #include_directories("/usr/local/include/freetype2")
