--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 find_package(OpenCV REQUIRED)
 
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/creator/Projects/C++/REN/run)	#这一句指定可执行文件的位置
-#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../run)	#这一句指定可执行文件的位置
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/creator/Projects/C++/REN/run)	#这一句指定可执行文件的位置
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../run)	#这一句指定可执行文件的位置
 
-include_directories(${OPENCV_INCLUDE_DIRS})
+include_directories(${OpenCV_INCLUDE_DIRS})
 #include_directories("/usr/local/include/freetype2")
 
 file(GLOB CURRENT_HEADERS  include/*.* include/lib/*.h)
